--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,26 +3,56 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/_5sdp"
     tools:context=".LoginActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:gravity="center|center_horizontal"
+
+        >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"
-        android:gravity="center_horizontal"
+        android:layout_weight="1"
         android:textStyle="bold"
-        android:textSize="@dimen/_18sdp"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:textSize="@dimen/_20sdp"
         android:textColor="@color/black"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Temukan Barang Rental di Aplikasi E-Rental"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_15sdp"
+            android:textStyle="bold" />
+</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/_150sdp"
+        android:gravity="center"
+        android:weightSum="2">
+
     <EditText
+
         android:id="@+id/edtusername"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:background="@drawable/bg_login"
+        android:layout_gravity="center"
         android:hint="Username"
         android:inputType="text"
         android:padding="10dp"
@@ -42,22 +72,33 @@
         android:singleLine="true"
         android:textColor="@color/black"
         android:textColorHint="@color/material_on_background_disabled"/>
+    </LinearLayout>
 
 
-    <TextView
-        android:id="@+id/txt_register"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register"
-        android:textStyle="bold"
-        android:textSize="@dimen/_10sdp"
-        android:textColor="@color/black"/>
-    <Button
-        android:layout_width="@dimen/_80sdp"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginLeft="@dimen/_8sdp"
-        android:id="@+id/btnlogin"
-        android:text="Login"
-        android:layout_marginTop="@dimen/_8sdp" />
+        android:orientation="horizontal"
+       >
+
+        <Button
+            android:id="@+id/btnlogin"
+            android:layout_width="@dimen/_80sdp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_gravity="left"
+            android:text="Login" />
+
+        <Button
+            android:id="@+id/txt_register"
+            android:layout_width="@dimen/_80sdp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_marginLeft="@dimen/_130sdp"
+            android:text="Register"
+            android:textSize="@dimen/_10sdp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
 </LinearLayout>
