--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,19 +3,43 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/_5sdp"
     tools:context=".RegisterActivity">
 
-    <TextView
+     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:weightSum="2">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:text="Register"
-        android:textSize="@dimen/_18sdp"
+        android:textSize="@dimen/_20sdp"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_weight="1"
+        android:layout_gravity="center_horizontal"
         android:textColor="@color/black"
-        android:textStyle="bold"
-        android:gravity="center_horizontal"/>
+        android:textStyle="bold" />
+         <TextView
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:text="Masukan Data,\nInput yang Sesuai!"
+             android:layout_weight="1"
+             android:textSize="@dimen/_15sdp"
+             android:textColor="@color/black"
+             android:textStyle="bold" />
+     </LinearLayout>
+     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/_80sdp"
+        android:gravity="center">
     <EditText
         android:id="@+id/edt_namauser_register"
         android:layout_width="fill_parent"
@@ -88,10 +112,13 @@
         android:singleLine="true"
         android:textColor="@color/black"
         android:textColorHint="@color/material_on_background_disabled"/>
+     </LinearLayout>
+
     <Button
         android:layout_width="@dimen/_80sdp"
         android:layout_height="@dimen/_40sdp"
         android:layout_marginLeft="@dimen/_8sdp"
+        android:layout_gravity="right"
         android:id="@+id/btn_daftar"
         android:text="Daftar"
         android:layout_marginTop="@dimen/_8sdp" />
