--- a/app/src/main/res/layout/item_row_isi_kategori.xml
+++ b/app/src/main/res/layout/item_row_isi_kategori.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-
-    android:layout_gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_width="match_parent"
+       android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
         android:orientation="vertical"
         android:padding="@dimen/_2sdp">
 
         <androidx.cardview.widget.CardView
-            android:layout_gravity="center_horizontal"
-            android:id="@+id/cardview_menu"
+
+            android:id="@+id/cardview_isi_kategori"
             android:clickable="true"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/_130sdp"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_10sdp"
@@ -32,25 +28,32 @@
             android:background="@drawable/bg_isi"
             android:focusable="true">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="@dimen/_70sdp"
+                    android:layout_width="@dimen/_100sdp"
                     android:layout_height="@dimen/_70sdp"
                     android:adjustViewBounds="true"
-                    android:layout_gravity="center"
                     android:scaleType="centerCrop"
-                    android:id="@+id/img_kategori"
-                    android:src="@drawable/pakaian" />
+                    android:id="@+id/img_isi_kategori"
+                    android:src="@drawable/fotografi" />
 
                 <TextView
-                     android:layout_width="match_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/txt_kategori"
-                    android:gravity="center_horizontal"
+                    android:id="@+id/txt_isi_kategori"
                     android:text="Pakaian"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/_10sdp"
+                    android:textColor="@color/black"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txt_tarif"
+                    android:text="Rp.50000"
                     android:textStyle="bold"
                     android:textSize="@dimen/_10sdp"
                     android:textColor="@color/black"/>
@@ -59,8 +62,6 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
-
-
 
 
 </LinearLayout>
