--- a/app/src/main/res/layout/activity_form_store.xml
+++ b/app/src/main/res/layout/activity_form_store.xml
@@ -129,12 +129,37 @@
         android:textColor="@color/black"
         android:textColorHint="@color/material_on_background_disabled" />
 
+    <LinearLayout
+        android:layout_marginLeft="@dimen/_5sdp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="@dimen/_8sdp"
+        android:weightSum="2">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gambar Store"
+            android:textColor="@color/black"
+            android:layout_weight="1"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/edt_gambarStore"
+            android:hint="Gambar"
+            android:singleLine="true"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:textColorHint="@color/material_on_background_disabled"/>
+    </LinearLayout>
+
     <Button
         android:layout_marginTop="@dimen/_8sdp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btn_nextStore"
         android:text="Next"
+        android:layout_marginRight="@dimen/_10sdp"
         android:layout_gravity="right"/>
 
 
