--- a/app/src/main/res/layout/activity_pasang_sewa.xml
+++ b/app/src/main/res/layout/activity_pasang_sewa.xml
@@ -5,9 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/_5sdp"
     tools:context=".Profil.PasangSewaActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_menu"
+        android:background="#FF9800"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal"
+                android:text="E-Rental "
+                android:textColor="@color/white"
+                android:textSize="@dimen/_17sdp"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_8sdp"
         android:weightSum="2">
         <TextView
@@ -43,6 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_8sdp"
         android:weightSum="2">
         <TextView
@@ -54,7 +78,7 @@
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner"
+            android:id="@+id/spinner_Kategori"
             android:layout_weight="1"/>
     </LinearLayout>
 
@@ -62,6 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_8sdp"
         android:weightSum="2">
         <TextView
@@ -84,6 +109,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/_5sdp"
+        android:layout_marginBottom="@dimen/_8sdp"
+        android:weightSum="2">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Stok Barang"
+            android:textColor="@color/black"
+            android:layout_weight="1"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/edt_stokBarang"
+            android:inputType="text"
+            android:singleLine="true"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:textColorHint="@color/material_on_background_disabled"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_8sdp"
         android:weightSum="2">
         <TextView
@@ -106,6 +155,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_8sdp"
         android:weightSum="2">
         <TextView
@@ -117,7 +167,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_input_gambar"
+            android:id="@+id/edt_input_gambar"
             android:layout_weight="1"
             android:textColor="@color/black"
             android:textColorHint="@color/material_on_background_disabled"/>
@@ -128,6 +178,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn_sewa"
         android:text="Pasang Sewa!"
+        android:layout_marginRight="@dimen/_10sdp"
         android:textColor="@color/white"
         android:layout_gravity="right"
         android:textColorHint="@color/material_on_background_disabled"/>
