--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -16,14 +16,25 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_marginHorizontal="@dimen/_10sdp"
+            android:weightSum="2"
             android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/btnClose"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+
+                android:src="@drawable/ic_baseline_close_24"
+                app:tint="#fff" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|center_horizontal"
                 android:text="E-Rental "
+                android:layout_marginLeft="@dimen/_10sdp"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_17sdp"
                 android:textStyle="bold" />
@@ -45,6 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/_5sdp"
         android:weightSum="2" >
         <TextView
             android:layout_width="match_parent"
@@ -72,6 +84,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/_5sdp"
         android:orientation="horizontal"
         android:weightSum="2" >
         <TextView
@@ -99,6 +112,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/_5sdp"
         android:weightSum="2" >
         <TextView
             android:layout_width="match_parent"
@@ -125,6 +139,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/_5sdp"
         android:weightSum="2" >
         <TextView
             android:layout_width="match_parent"
