--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -31,18 +31,28 @@
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
-        <TextView
-            android:layout_marginTop="@dimen/_20sdp"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Ingin Pasang Barang Sewa? Daftarkan Barang Anda!"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_12sdp"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_daftarStore"
-        android:text="Store"/>
+        android:padding="@dimen/_5sdp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Ingin Pasang Barang Sewa? Daftarkan Barang Anda!"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14sdp"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_daftarStore"
+            android:text="Store"/>
+
+    </LinearLayout>
+
+
 
 
 </LinearLayout>
