--- a/app/src/main/res/layout/item_row_isi_kategori.xml
+++ b/app/src/main/res/layout/item_row_isi_kategori.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
        android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:clickable="true"
         android:orientation="vertical"
         android:padding="@dimen/_2sdp">
@@ -16,7 +18,7 @@
 
             android:id="@+id/cardview_isi_kategori"
             android:clickable="true"
-            android:layout_width="@dimen/_130sdp"
+            android:layout_width="@dimen/_120sdp"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_10sdp"
@@ -36,6 +38,7 @@
                     android:layout_width="@dimen/_100sdp"
                     android:layout_height="@dimen/_70sdp"
                     android:adjustViewBounds="true"
+                    android:layout_gravity="center"
                     android:scaleType="centerCrop"
                     android:id="@+id/img_isi_kategori"
                     android:src="@drawable/fotografi" />
@@ -44,6 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/txt_isi_kategori"
+                    android:gravity="center"
                     android:text="Pakaian"
                     android:textStyle="bold"
                     android:textSize="@dimen/_10sdp"
@@ -54,6 +58,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/txt_tarif"
                     android:text="Rp.50000"
+                    android:gravity="center"
                     android:textStyle="bold"
                     android:textSize="@dimen/_10sdp"
                     android:textColor="@color/black"/>
