Perbaikan Tampilan 1 Dari Adit

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,104 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/_5sdp"
     tools:context=".LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginTop="@dimen/_15sdp"
-        android:gravity="center|center_horizontal"
-
-        >
-    <TextView
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:layout_weight="1"
-        android:textStyle="bold"
-        android:layout_marginLeft="@dimen/_20sdp"
-        android:textSize="@dimen/_20sdp"
-        android:textColor="@color/black"/>
+        android:layout_centerInParent="true"
+        android:layout_margin="@dimen/_20sdp"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:fontFamily="@font/quicksand_bold"
+            android:text="Login"
+            android:textColor="?colorOnSecondary"
+            android:textSize="@dimen/_35sdp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/quicksand_medium"
             android:text="Temukan Barang Rental di Aplikasi E-Rental"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_15sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
             android:textStyle="bold" />
-</LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/_150sdp"
-        android:gravity="center"
-        android:weightSum="2">
-
-    <EditText
-
-        android:id="@+id/edtusername"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/bg_login"
-        android:layout_gravity="center"
-        android:hint="Username"
-        android:inputType="text"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:textColorHint="@color/material_on_background_disabled"/>
-
-    <EditText
-        android:id="@+id/edtpass"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/bg_login"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:textColorHint="@color/material_on_background_disabled"/>
-    </LinearLayout>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-       >
+        <EditText
+            android:id="@+id/edtusername"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bg_login"
+            android:hint="Username"
+            android:inputType="text"
+            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
+            android:padding="10dp"
+            android:singleLine="true" />
+
+        <EditText
+            android:id="@+id/edtpass"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/bg_login"
+            android:hint="Password"
+            android:drawableLeft="@drawable/ic_baseline_lock_24"
+            android:inputType="textPassword"
+            android:padding="10dp"
+            android:singleLine="true"/>
 
         <Button
             android:id="@+id/btnlogin"
-            android:layout_width="@dimen/_80sdp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_10sdp"
             android:layout_gravity="left"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:background="@drawable/edmain"
+            android:textColor="?colorSecondary"
+            android:fontFamily="@font/quicksand_bold"
             android:text="Login" />
 
-        <Button
-            android:id="@+id/txt_register"
-            android:layout_width="@dimen/_80sdp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:layout_marginLeft="@dimen/_130sdp"
-            android:text="Register"
-            android:textSize="@dimen/_10sdp"
-            android:textStyle="bold" />
+<!--        <Button-->
+<!--            android:id="@+id/txt_register"-->
+<!--            android:layout_width="@dimen/_80sdp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="@dimen/_130sdp"-->
+<!--            android:layout_marginBottom="@dimen/_10sdp"-->
+<!--            android:text="Register"-->
+<!--            android:textSize="@dimen/_10sdp"-->
+<!--            android:textStyle="bold" />-->
+
 
     </LinearLayout>
 
-</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/_20sdp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/quicksand_medium"
+            android:text="Belum Punya akun? "/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Daftar Di sini"
+            android:textColor="?colorPrimary"
+            android:id="@+id/txt_register"/>
+
+    </LinearLayout>
+
+
+</RelativeLayout>
