--- a/app/src/main/res/layout/activity_isi_kategori.xml
+++ b/app/src/main/res/layout/activity_isi_kategori.xml
@@ -7,51 +7,51 @@
     android:orientation="vertical"
     tools:context=".Kategori.IsiKategoriActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_menu"
-        android:background="#FF9800"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        android:id="@+id/toolbar_menu"-->
+<!--        android:background="#FF9800"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+<!--        <LinearLayout-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal"
-                android:text="E-Rental "
-                android:textColor="@color/white"
-                android:textSize="@dimen/_17sdp"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center|center_horizontal"-->
+<!--                android:text="E-Rental "-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textSize="@dimen/_17sdp"-->
+<!--                android:textStyle="bold" />-->
 
-            <RelativeLayout
-                android:layout_width="20dp"
-                android:layout_height="wrap_content"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_30sdp"
-                android:background="@drawable/bg_isi"
-                android:gravity="left|center_vertical"
-                android:textAllCaps="false"
-                android:drawableStart="@drawable/ic_baseline_search_24"
-                android:id="@+id/btncari"
-                android:hint="Cari Disini.."
-                android:imeOptions="actionDone"
-                android:paddingHorizontal="@dimen/_20sdp"
-                android:layout_marginRight="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:layout_marginTop="@dimen/_3sdp"
-                android:textColor="@color/black" />
-            <RelativeLayout
-                android:layout_width="10dp"
-                android:layout_height="match_parent"/>
+<!--            <RelativeLayout-->
+<!--                android:layout_width="20dp"-->
+<!--                android:layout_height="wrap_content"/>-->
+<!--            <EditText-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="@dimen/_30sdp"-->
+<!--                android:background="@drawable/bg_isi"-->
+<!--                android:gravity="left|center_vertical"-->
+<!--                android:textAllCaps="false"-->
+<!--                android:drawableStart="@drawable/ic_baseline_search_24"-->
+<!--                android:id="@+id/btncari"-->
+<!--                android:hint="Cari Disini.."-->
+<!--                android:imeOptions="actionDone"-->
+<!--                android:paddingHorizontal="@dimen/_20sdp"-->
+<!--                android:layout_marginRight="@dimen/_5sdp"-->
+<!--                android:layout_marginBottom="@dimen/_5sdp"-->
+<!--                android:layout_marginTop="@dimen/_3sdp"-->
+<!--                android:textColor="@color/black" />-->
+<!--            <RelativeLayout-->
+<!--                android:layout_width="10dp"-->
+<!--                android:layout_height="match_parent"/>-->
 
 
-        </LinearLayout>
-    </androidx.appcompat.widget.Toolbar>
+<!--        </LinearLayout>-->
+<!--    </androidx.appcompat.widget.Toolbar>-->
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="@dimen/_10sdp"
         android:id="@+id/recycler_isi_kategori"
