--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,128 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/_5sdp"
     tools:context=".RegisterActivity">
 
-     <LinearLayout
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_20sdp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/quicksand_bold"
+            android:text="Daftar"
+            android:textColor="?colorOnSecondary"
+            android:textSize="@dimen/_35sdp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_20sdp"
+            android:fontFamily="@font/quicksand_medium"
+            android:text="Daftar Di Sini Untuk Dapat Masuk"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/edt_namauser_register"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bg_login"
+            android:hint="Nama Lengkap"
+            android:inputType="text"
+            android:padding="10dp"
+            android:singleLine="true" />
+
+        <EditText
+            android:id="@+id/edt_alamatuser_register"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bg_login"
+            android:hint="Alamat"
+            android:inputType="text"
+            android:padding="10dp"
+            android:singleLine="true" />
+
+        <EditText
+            android:id="@+id/edt_emailuser_register"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bg_login"
+            android:hint="Email"
+            android:inputType="text"
+            android:padding="10dp"
+            android:singleLine="true"/>
+
+        <EditText
+            android:id="@+id/edt_telpuser_register"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bg_login"
+            android:hint="Telepon"
+            android:inputType="text"
+            android:padding="10dp"
+            android:singleLine="true"/>
+
+        <EditText
+            android:id="@+id/edt_username_register"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bg_login"
+            android:hint="Username"
+            android:inputType="text"
+            android:padding="10dp"
+            android:singleLine="true"/>
+
+        <EditText
+            android:id="@+id/edt_pass_register"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bg_login"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:padding="10dp"
+            android:singleLine="true"/>
+
+        <Button
+            android:id="@+id/btn_daftar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:textColor="?colorSecondary"
+            android:fontFamily="@font/quicksand_bold"
+            android:text="Daftar" />
+
+    </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:orientation="horizontal"
-        android:layout_marginTop="@dimen/_15sdp"
-        android:weightSum="2">
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/_20sdp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Register"
-        android:textSize="@dimen/_20sdp"
-        android:layout_marginLeft="@dimen/_20sdp"
-        android:layout_weight="1"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
-         <TextView
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:text="Masukan Data,\nInput yang Sesuai!"
-             android:layout_weight="1"
-             android:textSize="@dimen/_15sdp"
-             android:textColor="@color/black"
-             android:textStyle="bold" />
-     </LinearLayout>
-     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="@dimen/_80sdp"
-        android:gravity="center">
-    <EditText
-        android:id="@+id/edt_namauser_register"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/bg_login"
-        android:hint="Nama Lengkap"
-        android:inputType="text"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:textColorHint="@color/material_on_background_disabled"/>
-    <EditText
-        android:id="@+id/edt_alamatuser_register"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/bg_login"
-        android:hint="Alamat"
-        android:inputType="text"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:textColorHint="@color/material_on_background_disabled"/>
-    <EditText
-        android:id="@+id/edt_emailuser_register"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/bg_login"
-        android:hint="Email"
-        android:inputType="text"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:textColorHint="@color/material_on_background_disabled"/>
-    <EditText
-        android:id="@+id/edt_telpuser_register"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/bg_login"
-        android:hint="Telepon"
-        android:inputType="text"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:textColorHint="@color/material_on_background_disabled"/>
-    <EditText
-        android:id="@+id/edt_username_register"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/bg_login"
-        android:hint="Username"
-        android:inputType="text"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:textColorHint="@color/material_on_background_disabled"/>
-    <EditText
-        android:id="@+id/edt_pass_register"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/bg_login"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:padding="10dp"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:textColorHint="@color/material_on_background_disabled"/>
-     </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/quicksand_medium"
+            android:text="Sudah Punya akun? "/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Masuk Di sini"
+            android:textColor="?colorPrimary"
+            android:id="@+id/txt_Login"/>
 
-    <Button
-        android:layout_width="@dimen/_80sdp"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginLeft="@dimen/_8sdp"
-        android:layout_gravity="right"
-        android:id="@+id/btn_daftar"
-        android:text="Daftar"
-        android:layout_marginTop="@dimen/_8sdp" />
+    </LinearLayout>
 
-
-
-</LinearLayout>
+</RelativeLayout>
