--- a/app/src/main/res/layout/fragment__profil.xml
+++ b/app/src/main/res/layout/fragment__profil.xml
@@ -6,29 +6,10 @@
     android:orientation="vertical"
     tools:context=".Profil.Fragment_Profil">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_menu"
-        android:background="#FF9800"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_main" />
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal"
-                android:text="E-Rental "
-                android:textColor="@color/white"
-                android:textSize="@dimen/_17sdp"
-                android:textStyle="bold" />
-
-
-        </LinearLayout>
-    </androidx.appcompat.widget.Toolbar>
 
     <ImageView
         android:layout_marginTop="@dimen/_10sdp"
