--- a/app/src/main/res/layout/item_row_kategori.xml
+++ b/app/src/main/res/layout/item_row_kategori.xml
@@ -1,66 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-
-    android:layout_gravity="center"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="true"
-        android:orientation="vertical"
-        android:padding="@dimen/_2sdp">
-
         <androidx.cardview.widget.CardView
-            android:layout_gravity="center_horizontal"
-            android:id="@+id/cardview_menu"
+    android:id="@+id/cardview_menu"
             android:clickable="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
             android:layout_marginBottom="@dimen/_5sdp"
-            app:cardCornerRadius="@dimen/_8sdp"
+            app:cardCornerRadius="@dimen/_100sdp"
             app:cardElevation="@dimen/_5sdp"
-            android:foreground="?android:attr/selectableItemBackground"
             android:background="@drawable/bg_isi"
             android:focusable="true">
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="@dimen/_70sdp"
-                    android:layout_height="@dimen/_70sdp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
                     android:adjustViewBounds="true"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:layout_marginRight="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"
                     android:layout_gravity="center"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitCenter"
                     android:id="@+id/img_kategori"
                     android:src="@drawable/pakaian" />
 
-                <TextView
-                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txt_kategori"
-                    android:gravity="center_horizontal"
-                    android:text="Pakaian"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/_10sdp"
-                    android:textColor="@color/black"/>
 
-
-            </LinearLayout>
+            </RelativeLayout>
         </androidx.cardview.widget.CardView>
-    </LinearLayout>
-
-
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_kategori"
+        android:gravity="center_horizontal"
+        android:text="Pakaian"
+        android:textStyle="bold"
+        android:fontFamily="@font/quicksand_bold"
+        android:textSize="@dimen/_10sdp"/>
 
 </LinearLayout>
