--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,15 +4,15 @@
 
     <item
         android:id="@+id/home"
-        android:icon="@drawable/ic_action_home"
+        android:icon="@drawable/home"
         android:title="Home"/>
 
     <item
         android:id="@+id/pesanan"
-        android:icon="@drawable/ic_action_pesanan"
+        android:icon="@drawable/pesanan"
         android:title="Pesanan"/>
     <item
         android:id="@+id/profil"
-        android:icon="@drawable/ic_action_profil"
+        android:icon="@drawable/ic_baseline_account_circle_24"
         android:title="Profil"/>
 </menu>
