--- a/app/src/main/res/layout/item_row_isi_kategori.xml
+++ b/app/src/main/res/layout/item_row_isi_kategori.xml
@@ -1,72 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="@dimen/_140sdp"
+    android:layout_height="@dimen/_180sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <LinearLayout
-       android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:clickable="true"
-        android:orientation="vertical"
-        android:padding="@dimen/_2sdp">
 
         <androidx.cardview.widget.CardView
-
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:id="@+id/cardview_isi_kategori"
             android:clickable="true"
-            android:layout_width="@dimen/_120sdp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_5sdp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_140sdp"
             app:cardCornerRadius="@dimen/_8sdp"
             app:cardElevation="@dimen/_5sdp"
             android:foreground="?android:attr/selectableItemBackground"
             android:background="@drawable/bg_isi"
+            android:layout_alignParentTop="true"
             android:focusable="true">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="@dimen/_100sdp"
-                    android:layout_height="@dimen/_70sdp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:adjustViewBounds="true"
                     android:layout_gravity="center"
                     android:scaleType="centerCrop"
                     android:id="@+id/img_isi_kategori"
-                    android:src="@drawable/fotografi" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txt_isi_kategori"
-                    android:gravity="center"
-                    android:text="Pakaian"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/_10sdp"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txt_tarif"
-                    android:text="Rp.50000"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/_10sdp"
-                    android:textColor="@color/black"/>
-
-
+                    android:src="@drawable/website" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
-    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_50sdp"
+        android:layout_marginTop="@dimen/_120sdp"
+        app:cardCornerRadius="@dimen/_10sdp"
+        android:layout_marginLeft="@dimen/_15sdp"
+        android:layout_marginRight="@dimen/_15sdp"
+        android:translationZ="@dimen/_5sdp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
 
 
-</LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/txt_isi_kategori"
+                android:gravity="center"
+                android:text="Pakaian"
+                android:textStyle="bold"
+                android:fontFamily="@font/quicksand_medium"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/txt_tarif"
+                android:text="Rp.50000"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:fontFamily="@font/quicksand_bold"
+                android:textColor="?colorPrimary"/>
+
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</RelativeLayout>
