--- a/app/src/main/res/layout/fragment__home.xml
+++ b/app/src/main/res/layout/fragment__home.xml
@@ -24,36 +24,39 @@
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
                     <LinearLayout
                         android:id="@+id/mainLayout"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
-<!--                        Search bar-->
+                        <!--                        Search bar-->
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_40sdp">
+
                             <RelativeLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_20sdp"
                                 android:background="?colorPrimary" />
+
                             <EditText
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_40sdp"
                                 android:layout_marginLeft="@dimen/_20sdp"
                                 android:layout_marginTop="@dimen/_5sdp"
                                 android:layout_marginRight="@dimen/_20sdp"
-                                android:background="@drawable/bg_isi"
+                                android:background="@drawable/edbg"
                                 android:drawableLeft="@drawable/ic_baseline_search_24"
-                                android:paddingLeft="@dimen/_5sdp"
-                                android:translationZ="@dimen/_100sdp" />
+                                android:paddingLeft="@dimen/_5sdp" />
                         </RelativeLayout>
 
-<!--                        slider -->
+                        <!--                        slider -->
                         <androidx.cardview.widget.CardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -61,6 +64,7 @@
                             android:layout_marginTop="@dimen/_10sdp"
                             android:layout_marginRight="@dimen/_20sdp"
                             app:cardCornerRadius="6dp">
+
                             <com.smarteist.autoimageslider.SliderView
                                 android:id="@+id/imageSlider"
                                 android:layout_width="match_parent"
@@ -80,7 +84,7 @@
                                 app:sliderStartAutoCycle="true" />
                         </androidx.cardview.widget.CardView>
 
-<!--                        recycler kategori -->
+                        <!--                        recycler kategori -->
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/recycler_kategori"
                             android:layout_width="wrap_content"
@@ -92,9 +96,33 @@
                             tools:itemCount="4"
                             tools:listitem="@layout/item_row_kategori" />
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
 
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/_20sdp"
+                                android:layout_marginTop="@dimen/_20sdp"
+                                android:fontFamily="@font/quicksand_bold"
+                                android:text="Fotographi Populer"
+                                android:textColor="?colorPrimary"
+                                android:textSize="@dimen/_12sdp" />
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                                android:orientation="horizontal"
+                                android:layout_marginTop="@dimen/_5sdp"
+                                android:id="@+id/rv_foto"
+                                tools:listitem="@layout/item_row_isi_kategori"/>
+                        </LinearLayout>
 
                     </LinearLayout>
+
                     <com.facebook.shimmer.ShimmerFrameLayout
                         android:id="@+id/shimmer_beranda"
                         android:layout_width="match_parent"
